# wifi-analyzer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
data/: io.github.yeager.WifiAnalyzer.desktop  se.danielnylander.wifi-analyzer.desktop
locale/sv/LC_MESSAGES/: wifi-analyzer.mo
po/: sv.po  wifi-analyzer.pot
po/locale/sv/LC_MESSAGES/: wifi-analyzer.mo
src/wifi_analyzer/: __init__.py  __main__.py  accessibility.py  app.py  export_helper.py  print_helper.py  undo_redo.py
